--- a/source/turntable/src/lib/css/general.css
+++ b/source/turntable/src/lib/css/general.css
@@ -1,42 +1,56 @@
+
+*:focus {
+    outline: none;
+}
+
 * {
-		margin: 0;
-		padding: 0;
-	}
+	padding: 0;
+	margin: 0;
+	box-sizing: border-box;
+}
 
-	*:focus {
-		outline: none;
-	}
+html,
+body {
+	height: 100%;
+	overflow: auto;
+	-webkit-overflow-scrolling: touch;
+}
 
-	body {
-		font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-		-moz-user-select: none;
-		/*火狐*/
-		-webkit-user-select: none;
-		/*webkit浏览器*/
-		-ms-user-select: none;
-		/*IE10*/
-		-khtml-user-select: none;
-		/*早期浏览器*/
-		user-select: none;
-	}
+body {
+	background: white;
+	font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+	font-size: 14px;
+	-moz-user-select: none;
+	/*火狐*/
+	-webkit-user-select: none;
+	/*webkit浏览器*/
+	-ms-user-select: none;
+	/*IE10*/
+	-khtml-user-select: none;
+	/*早期浏览器*/
+	user-select: none;
+	-webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+	-moz-user-focus: none;
+	position: relative;
+}
 
-	div {
-		list-style: none;
-		user-select: none;
-		-webkit-user-select: none;
-	}
+div {
+    list-style: none;
+    user-select: none;
+    -webkit-user-select: none;
+}
 
-	ul,
-	li {
-		list-style: none;
-		user-select: none;
-		-webkit-user-select: none;
-	}
+ul,
+li {
+    list-style: none;
+    user-select: none;
+    -webkit-user-select: none;
+}
 
-	li {
-		text-align: center;
-	}
+li {
+    text-align: center;
+}
 
-	em {
-		font-style: normal;
-	}
+em {
+    font-style: normal;
+}
