--- a/source/invited/src/lib/css/general.css
+++ b/source/invited/src/lib/css/general.css
@@ -54,3 +54,8 @@ li {
 em {
     font-style: normal;
 }
+/* @media only screen and (device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3) {
+	.main-body {
+	  height: calc(100% + 50px);
+	}
+  } */
