--- a/release/SIT/rentalKarl/static/css/general.css
+++ b/release/SIT/rentalKarl/static/css/general.css
@@ -16,7 +16,7 @@ body {
 }
 
 body {
-	background: #f7f7f7;
+	/*background: #f7f7f7;*/
 	font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
 	font-size: 14px;
 	-moz-user-select: none;
