--- a/release/SIT/rentalKarl/static/css/initCss.css
+++ b/release/SIT/rentalKarl/static/css/initCss.css
@@ -49,7 +49,7 @@ html,body{
     position: relative;
     /* height: 100%; */
       width: 100%;
-      height: 100%;
+      height: initial;
       background: #ffffff;
 }
 #app{
