--- a/release/SIT/rentalKarl/static/css/initCss.css
+++ b/release/SIT/rentalKarl/static/css/initCss.css
@@ -351,3 +351,13 @@ em {
    z-index: 999999999;
 }
 
+
+::-webkit-scrollbar {
+  display: none;
+ }
+html body{
+  /*隐藏滚动条，当IE下溢出，仍然可以滚动*/
+  -ms-overflow-style:none;
+  /*火狐下隐藏滚动条*/
+  overflow:-moz-scrollbars-none;
+}
