--- a/source/batteryInsurance/static/general.css
+++ b/source/batteryInsurance/static/general.css
@@ -53,3 +53,9 @@ li {
 em {
     font-style: normal;
 }
+
+.van-field__control:disabled {
+    color: #369;
+    background-color: transparent;
+    opacity: 1;
+}
