--- a/release/SIT/rentalKarl/static/css/initCss.css
+++ b/release/SIT/rentalKarl/static/css/initCss.css
@@ -275,21 +275,16 @@ em {
 .conters2 p:nth-child(3) i{
   background-color:#00BEC6;
 }
-.van-tabs__nav.van-tabs__nav--line{
-  position: fixed;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: initial;
-  z-index: 100;
-}
-
 .van-hairline--top-bottom::after{
   opacity: 1;
 }
 .van-tabbar--fixed{
   box-shadow:0px 0px 8px 0px rgba(0,0,0,0.08);
+
+
 }
+
+
 .van-popup,.van-popup--top{
   text-align: left;
 }
@@ -361,3 +356,39 @@ html body{
   overflow:-moz-scrollbars-none;
 }
 
+.shopDiv .van-tabs__nav.van-tabs__nav--line{
+  border-bottom: 1px solid rgba(241,241,241,1)!important;
+}
+.van-tabbar.van-tabbar--fixed{
+  z-index: 99999999999999!important;
+}
+.van-picker__columns{
+  z-index: 999999!important;
+}
+.van-tabs__wrap.van-hairline--top-bottom{
+  /*z-index: 9999999999999!important;*/
+}
+.van-sticky{
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: 999999999;
+  height: 44px;
+  width: 100%;
+}
+.van-tabs__nav.van-tabs__nav--line{
+  width: 100%;
+}
+@supports (bottom: env(safe-area-inset-bottom)) {
+  .van-tabbar{
+    padding-bottom: env(safe-area-inset-bottom);
+    height:initial!important;
+  }
+  .van-tabbar .van-tabbar-item{
+      height: 50px;
+  }
+}
+
+#Feedback .contens h1{
+  margin-top: 60px;
+}
